--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(FLibraryCollection LANGUAGES CXX VERSION 1.0.2)
+project(FLibraryCollection LANGUAGES CXX VERSION 1.1.1)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(FLogger)
+add_subdirectory(FQLogger)
 
 add_library(FLibraryCollection SHARED
   FLibraryCollection.cpp
