Signed-off-by: root <tobias@hobbes.fritz.box>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(FLibraryCollection LANGUAGES CXX VERSION 1.1.1)
+project(FLibraryCollection LANGUAGES CXX VERSION 1.2.0)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 11)
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(FLogger)
 add_subdirectory(FQLogger)
+add_subdirectory(FHammingCode)
 
 add_library(FLibraryCollection SHARED
   FLibraryCollection.cpp
