--- a/FQLogger/CMakeLists.txt
+++ b/FQLogger/CMakeLists.txt
@@ -22,6 +22,6 @@ target_link_libraries(FQLogger PRIVATE Qt5::Core)
 target_compile_definitions(FQLogger PRIVATE FQLOGGER_LIBRARY)
 
 install(TARGETS FQLogger DESTINATION lib)
-install(FILES FQLogger.h DESTINATION include/FLibraryCollection/FQLogger)
-install(FILES FQLogger_global.h DESTINATION include/FLibraryCollection/FQLogger)
+install(FILES FQLogger.hpp DESTINATION include/FLibraryCollection/FQLogger)
+install(FILES FQLogger_global.hpp DESTINATION include/FLibraryCollection/FQLogger)
 
