Beginig of the FString based on the base_string Signed-off-by: tobias@hobbes <tobiasfalk200242@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(FLogger)
 add_subdirectory(FQLogger)
+add_subdirectory(FString)
 #add_subdirectory(FHammingCode)
 
 #reds the text of example_1.cpp and writs it to the ExapleList.md
